// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Jobs /> should render properly while loading 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-11 {
  height: 100%;
}

.emotion-10 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-10 tr {
  background-color: #252525;
}

.emotion-10 tr .gear {
  opacity: 0;
}

.emotion-10 tr .gear:focus {
  opacity: 1;
}

.emotion-10 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-10 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-10 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-10 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-10 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-10 tr:hover .gear {
  opacity: 1;
}

.emotion-10 td {
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-10 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-10 td:last-of-type {
  border-right: 1px solid transparent;
}

.emotion-0 {
  text-align: left;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-9 {
  height: 100%;
  pointer-events: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 16px;
  line-height: 20px;
}

<div
    className="emotion-11"
  >
    <table
      className="emotion-10"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Status
          </th>
          <th
            className="emotion-0"
          >
            Job Name
          </th>
          <th
            className="emotion-0"
          >
            Created By
          </th>
          <th
            className="emotion-0"
          >
            Priority
          </th>
          <th
            className="emotion-0"
          >
            Created
          </th>
          <th
            className="emotion-0"
          >
            # Assets
          </th>
          <th
            className="emotion-0"
          >
            Errors
          </th>
          <th
            className="emotion-0"
          >
            Task Progress
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-9"
        >
          <td
            colSpan={8}
          >
            <div
              className="emotion-8"
            >
              Loading...
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;

exports[`<Jobs /> should render properly with jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-0 {
  text-align: left;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-135 {
  height: auto;
}

.emotion-134 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-134 tr {
  background-color: #252525;
}

.emotion-134 tr .gear {
  opacity: 0;
}

.emotion-134 tr .gear:focus {
  opacity: 1;
}

.emotion-134 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-134 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-134 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-134 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-134 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-134 tr:hover .gear {
  opacity: 1;
}

.emotion-134 td {
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-134 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-134 td:last-of-type {
  border-right: 1px solid transparent;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #c92300;
  background-color: #191919;
}

.emotion-9 {
  text-align: center;
}

.emotion-11 {
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 32px;
  height: 32px;
  padding: 8px;
  font-weight: 700;
  font-size: 16px;
  line-height: 20px;
  border-radius: 32px;
  color: #c92300;
  background-color: #191919;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-12 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-12:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-12:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-13 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4ac565;
}

.emotion-13:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-13:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-14 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #ebb52e;
}

.emotion-14:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-14:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-15 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4a90e2;
}

.emotion-15:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-15:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-18 {
  width: 8px;
}

.emotion-20 {
  position: relative;
}

.emotion-19 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 14px;
  line-height: 16px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  border-radius: 32px;
}

.emotion-19:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-19[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-19:hover {
  background-color: #808080;
}

.emotion-22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #ebb52e;
  background-color: #191919;
}

.emotion-29 {
  height: 100%;
  -webkit-flex: 14 0 auto;
  -ms-flex: 14 0 auto;
  flex: 14 0 auto;
  background-color: #4a90e2;
}

.emotion-29:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-29:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-36 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #4ac565;
  background-color: #191919;
}

.emotion-41 {
  height: 100%;
  -webkit-flex: 8 0 auto;
  -ms-flex: 8 0 auto;
  flex: 8 0 auto;
  background-color: #4ac565;
}

.emotion-41:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-41:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-42 {
  height: 100%;
  -webkit-flex: 4 0 auto;
  -ms-flex: 4 0 auto;
  flex: 4 0 auto;
  background-color: #4a90e2;
}

.emotion-42:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-42:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-85 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #4ac565;
}

.emotion-85:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-85:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
    className="emotion-135"
  >
    <table
      className="emotion-134"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Status
          </th>
          <th
            className="emotion-0"
          >
            Job Name
          </th>
          <th
            className="emotion-0"
          >
            Created By
          </th>
          <th
            className="emotion-0"
          >
            Priority
          </th>
          <th
            className="emotion-0"
          >
            Created
          </th>
          <th
            className="emotion-0"
          >
            # Assets
          </th>
          <th
            className="emotion-0"
          >
            Errors
          </th>
          <th
            className="emotion-0"
          >
            Task Progress
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              className="emotion-8"
            >
              Cancelled
            </div>
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-9"
          >
            100
          </td>
          <td>
            2019-11-07 01:38:36
          </td>
          <td
            className="emotion-9"
          >
            4
          </td>
          <td>
            <div
              className="emotion-11"
            >
              4
            </div>
          </td>
          <td>
            <div
              className="emotion-21"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-17"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-12"
                  />
                  <div
                    className="emotion-13"
                  />
                  <div
                    className="emotion-14"
                  />
                  <div
                    className="emotion-15"
                  />
                </div>
              </div>
              <div
                className="emotion-18"
              />
              <div
                className="emotion-20"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-19"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-22"
            >
              In Progress
            </div>
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-9"
          >
            100
          </td>
          <td>
            2019-11-07 01:38:36
          </td>
          <td
            className="emotion-9"
          >
            40
          </td>
          <td>
            <div
              className="emotion-11"
            >
              40
            </div>
          </td>
          <td>
            <div
              className="emotion-21"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-17"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-12"
                  />
                  <div
                    className="emotion-13"
                  />
                  <div
                    className="emotion-14"
                  />
                  <div
                    className="emotion-29"
                  />
                </div>
              </div>
              <div
                className="emotion-18"
              />
              <div
                className="emotion-20"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-19"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-36"
            >
              Archived
            </div>
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-9"
          >
            100
          </td>
          <td>
            2019-11-07 01:36:29
          </td>
          <td
            className="emotion-9"
          >
            400
          </td>
          <td>
            <div
              className="emotion-11"
            >
              400
            </div>
          </td>
          <td>
            <div
              className="emotion-21"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-17"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-12"
                  />
                  <div
                    className="emotion-41"
                  />
                  <div
                    className="emotion-42"
                  />
                </div>
              </div>
              <div
                className="emotion-18"
              />
              <div
                className="emotion-20"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-19"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-8"
            >
              Cancelled
            </div>
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-9"
          >
            100
          </td>
          <td>
            2019-11-07 01:35:36
          </td>
          <td
            className="emotion-9"
          >
            4000
          </td>
          <td>
            <div
              className="emotion-11"
            >
              4000
            </div>
          </td>
          <td>
            <div
              className="emotion-21"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-17"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-12"
                  />
                </div>
              </div>
              <div
                className="emotion-18"
              />
              <div
                className="emotion-20"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-19"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-36"
            >
              Finished
            </div>
          </td>
          <td>
            test_officer
          </td>
          <td>
            zach@zorroa.com
          </td>
          <td
            className="emotion-9"
          >
            100
          </td>
          <td>
            2019-10-11 21:11:03
          </td>
          <td
            className="emotion-9"
          >
            40000
          </td>
          <td>
            <div
              className="emotion-11"
            >
              40000
            </div>
          </td>
          <td>
            <div
              className="emotion-21"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-17"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-12"
                  />
                </div>
              </div>
              <div
                className="emotion-18"
              />
              <div
                className="emotion-20"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-19"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-22"
            >
              Active
            </div>
          </td>
          <td>
            test_officer
          </td>
          <td>
            zach@zorroa.com
          </td>
          <td
            className="emotion-9"
          >
            100
          </td>
          <td>
            2019-10-11 21:03:27
          </td>
          <td
            className="emotion-9"
          >
            400000
          </td>
          <td>
            <div
              className="emotion-11"
            >
              400000
            </div>
          </td>
          <td>
            <div
              className="emotion-21"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-17"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-12"
                  />
                </div>
              </div>
              <div
                className="emotion-18"
              />
              <div
                className="emotion-20"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-19"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-22"
            >
              Active
            </div>
          </td>
          <td>
            flipbook_export_1
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-9"
          >
            1
          </td>
          <td>
            2019-08-01 22:52:19
          </td>
          <td
            className="emotion-9"
          >
            0
          </td>
          <td />
          <td>
            <div
              className="emotion-21"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-17"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-85"
                  />
                </div>
              </div>
              <div
                className="emotion-18"
              />
              <div
                className="emotion-20"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-19"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-22"
            >
              Active
            </div>
          </td>
          <td>
            export_7_8_2019
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-9"
          >
            1
          </td>
          <td>
            2019-07-08 18:53:44
          </td>
          <td
            className="emotion-9"
          >
            0
          </td>
          <td />
          <td>
            <div
              className="emotion-21"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-17"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-12"
                  />
                </div>
              </div>
              <div
                className="emotion-18"
              />
              <div
                className="emotion-20"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-19"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-22"
            >
              Active
            </div>
          </td>
          <td>
            export_7_8_2019___
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-9"
          >
            1
          </td>
          <td>
            2019-07-08 18:43:03
          </td>
          <td
            className="emotion-9"
          >
            0
          </td>
          <td />
          <td>
            <div
              className="emotion-21"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-17"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-12"
                  />
                </div>
              </div>
              <div
                className="emotion-18"
              />
              <div
                className="emotion-20"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-19"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-22"
            >
              Active
            </div>
          </td>
          <td>
            sdlc-testdata-import.json
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-9"
          >
            100
          </td>
          <td>
            2019-07-03 16:49:15
          </td>
          <td
            className="emotion-9"
          >
            0
          </td>
          <td />
          <td>
            <div
              className="emotion-21"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-17"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-12"
                  />
                </div>
              </div>
              <div
                className="emotion-18"
              />
              <div
                className="emotion-20"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-19"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <div
              className="emotion-22"
            >
              Active
            </div>
          </td>
          <td>
            sdlc-testdata-import.json
          </td>
          <td>
            admin
          </td>
          <td
            className="emotion-9"
          >
            100
          </td>
          <td>
            2019-07-03 01:29:41
          </td>
          <td
            className="emotion-9"
          >
            49
          </td>
          <td>
            <div
              className="emotion-11"
            >
              49
            </div>
          </td>
          <td>
            <div
              className="emotion-21"
            >
              <div
                aria-label="Progress Bar"
                className="emotion-17"
                onKeyPress={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-12"
                  />
                  <div
                    className="emotion-85"
                  />
                </div>
              </div>
              <div
                className="emotion-18"
              />
              <div
                className="emotion-20"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="gear emotion-19"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <Pagination
      currentPage={1}
      totalPages={1}
    />
    <div>
       
    </div>
  </div>,
]
`;

exports[`<Jobs /> should render properly with no jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-0 {
  text-align: left;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-10 {
  height: 100%;
  pointer-events: none;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 16px;
  line-height: 20px;
}

.emotion-12 {
  height: auto;
}

.emotion-11 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-11 tr {
  background-color: #252525;
}

.emotion-11 tr .gear {
  opacity: 0;
}

.emotion-11 tr .gear:focus {
  opacity: 1;
}

.emotion-11 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-11 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-11 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-11 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-11 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-11 tr:hover .gear {
  opacity: 1;
}

.emotion-11 td {
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-11 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-11 td:last-of-type {
  border-right: 1px solid transparent;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    className="emotion-12"
  >
    <table
      className="emotion-11"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Status
          </th>
          <th
            className="emotion-0"
          >
            Job Name
          </th>
          <th
            className="emotion-0"
          >
            Created By
          </th>
          <th
            className="emotion-0"
          >
            Priority
          </th>
          <th
            className="emotion-0"
          >
            Created
          </th>
          <th
            className="emotion-0"
          >
            # Assets
          </th>
          <th
            className="emotion-0"
          >
            Errors
          </th>
          <th
            className="emotion-0"
          >
            Task Progress
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-10"
        >
          <td
            colSpan={8}
          >
            <div
              className="emotion-9"
            >
              <div
                className="emotion-8"
              >
                <svg
                  color="#c92300"
                  data-file-name="noJobs.svg"
                  width={40}
                />
                <div>
                  There are currently no jobs in the queue.
                </div>
                <div>
                  Any new job will appear here.
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;
